# advent-of-code

./: .gitignore  Cargo.toml  README.md
2021/: Cargo.toml
2021/src/: lib.rs  main.rs
2021/src/year2021/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day13.rs  mod.rs
2022/: Cargo.toml
2022/benches/: bench.rs
2022/src/: lib.rs  main.rs
2022/src/year2022/: day01.rs  mod.rs
2023/: .gitignore  Cargo.toml
2023/src/: lib.rs
benches/: bench.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day13.rs  lib.rs  main.rs
