[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
regex = "1.10.2"
itertools = "0.12.0"

[[bench]]
name = "bench"
harness = false
